//
// This file is part of arduino-cli.
//
// Copyright 2018 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to modify or
// otherwise use the software for commercial activities involving the Arduino
// software without disclosing the source code of your own applications. To purchase
// a commercial license, send an email to license@arduino.cc.
//

syntax = "proto3";

package cc.arduino.cli.commands;

option go_package = "github.com/arduino/arduino-cli/rpc/commands";

import "commands/common.proto";

message PlatformInstallReq {
    Instance instance = 1;
	string platform_package  = 2;
	string architecture = 3;
	string version = 4;
}

message PlatformInstallResp {
	DownloadProgress progress = 1;
	TaskProgress task_progress = 2;
}

message PlatformDownloadReq {
    Instance instance = 1;
	string platform_package  = 2;
	string architecture = 3;
	string version = 4;
}

message PlatformDownloadResp {
	DownloadProgress progress = 1;
}

message PlatformUninstallReq {
    Instance instance = 1;
	string platform_package  = 2;
	string architecture = 3;
}

message PlatformUninstallResp {
	TaskProgress task_progress = 1;
}

message PlatformUpgradeReq {
    Instance instance = 1;
	string platform_package  = 2;
	string architecture = 3;
}

message PlatformUpgradeResp {
	DownloadProgress progress = 1;
	TaskProgress task_progress = 2;
}

message PlatformSearchReq {
	Instance instance = 1;
	string search_args = 2;
}

message PlatformSearchResp {
	repeated Platform search_output = 1;
}

message PlatformListReq {
	Instance instance = 1;
	bool updatable_only = 2;
}

message PlatformListResp {
	repeated Platform installed_platform = 1;
}

message Platform {
	string ID = 1;
	string Installed = 2;
	string Latest = 3;
	string Name = 4;
	string Maintainer = 5;
	string Website = 6;
	string Email = 7;
	repeated Board Boards = 8;
}

message Board {
	string name = 1;
	string fqbn = 2;
}